force-app/main/default/objects/custom_create310__c/custom_create310__c.object-meta.xml
<CustomObject>
    <label>Custom created object310</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects310</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>