force-app/main/default/objects/custom_create310__c/fields/custom_create_310field506__c.field-meta.xml
<CustomField>
    <fullName>custom_create_310field506__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 310field506</label>
    <type>Checkbox</type>
</CustomField>